// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useSearchParams get and set reads and writes the search string 1`] = `
<View>
  <Text>
    The current query is "
    Michael Jackson
    ".
  </Text>
  <View>
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      rejectResponderTermination={true}
      underlineColorAndroid="transparent"
      value="Michael Jackson"
    />
  </View>
</View>
`;

exports[`useSearchParams get and set reads and writes the search string 2`] = `
<View>
  <Text>
    The current query is "
    Ryan Florence
    ".
  </Text>
  <View>
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      rejectResponderTermination={true}
      underlineColorAndroid="transparent"
      value="Ryan Florence"
    />
  </View>
</View>
`;

exports[`useSearchParams update function writes search string with correctly updated state 1`] = `
<View>
  <Text>
    The current params are "
    Simon
    " and "
    Garfunkel
    ".
  </Text>
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    rejectResponderTermination={true}
    underlineColorAndroid="transparent"
    value="Simon"
  />
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    rejectResponderTermination={true}
    underlineColorAndroid="transparent"
    value="Garfunkel"
  />
</View>
`;

exports[`useSearchParams update function writes search string with correctly updated state 2`] = `
<View>
  <Text>
    The current params are "
    Bert
    " and "
    Ernie
    ".
  </Text>
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    rejectResponderTermination={true}
    underlineColorAndroid="transparent"
    value="Bert"
  />
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    rejectResponderTermination={true}
    underlineColorAndroid="transparent"
    value="Ernie"
  />
</View>
`;
